[package]
name = "server"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = { version = "0.10.1" }
toml = { version = "0.8.8" }
mongodb = { version = "2.7.1" }
futures = { version = "0.3.29" }

[dev-dependencies]
actix-rt = { version = "2.9.0" }